--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -172,6 +172,12 @@ While it is possible to define separate $\alpha_j$ parameters for each category,
 
 In multiparameter models, the choice of reference prior depends on the parameter or statistic of interest (e.g. $\beta$, conditional CDF, conditional mean) [@berger_overall_2015].  Without prior information, we seek a value of $\boldsymbol{\alpha}$ with minimal impact on inference for a variety of settings and quantities of interest while still producing posterior estimates that can be well sampled by the MCMC algorithm.
 
+## Estimation
+
+The model in (\ref{eq:post}) is implemented using the `R` interface to Stan [@stan_development_team_rstan:_2018] which performs MCMC sampling using Hamiltonian Monte Carlo. [Add a few sentences about HMC - cite Turkman Computational Bayesian Statistics?] [@turkman_computational_2019] number iterations, number of chains, burn-in, adapt delta & other settings
+
+developmental R package `bayesCPM` to implement the Bayesian CPM model is available from [link] to github
+
 For the case study, we evaluate convergence of each model using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (elpd) calculated using leave-one-out (loo) cross-validation [@vehtari_practical_2017]. Model fit is assessed using graphical checks the of posterior predictive and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
 
 <!--
@@ -183,7 +189,7 @@ Model checking
 -->
 
 <!-- section describing how models were actually fit, i.e. used HMC implemented in Stan -->
-The model in (\ref{eq:post}) is implemented using the `R` interface to Stan [@stan_development_team_rstan:_2018] which performs MCMC sampling using Hamiltonian Monte Carlo. [Add a few sentences about HMC - cite Turkman Computational Bayesian Statistics?] [@turkman_computational_2019] number iterations, number of chains, burn-in, adapt delta & other settings
+
 
 <!--
 Note: the Berger et al. manuscript provides an approach for determining an 'overall objective prior' more systematically, but may be difficult to implement if interested in posterior parameters and functions of parameters (mean, CDF, quantiles) simultaneously
@@ -278,7 +284,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_a_pars.png"))
 
 Figure \@ref(fig:simplt-pars-2) shows the average bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ for scenario (2) using a logit link CPM. Unlike scenario (1), the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$). In this case it can be shown that the CPM parameter estimates are proportional to the parameters from the generating model. Assume latent $Y^*=\beta'X + a\varepsilon$ where $a>0$ is a constant scaling factor with $\varepsilon \sim F_{\varepsilon}$ assumed known, and observed $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze the observed outcome $Y$ results in estimates of $\xi=a^{-1}\beta$ for the linear predictor coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased because they are on the incorrect scale. If the estimates are adjusted using the scale factor, $a$, the bias in the parameters follows a similar pattern as scenario (1) (make fig?). However in practice, the value of the scale factor is unknown.
 
-For scenario (3) using the correctly specified loglog link with an identity transformation, bias is small for all parameters for both uncensored and censored outcomes except with the $n=25$ sample size. The estimates using prior $\boldsymbol{\alpha}=1/J$ are slightly more biased than the other concentration priors. (See supplemental figures \@ref(fig:simplt-pars5) and \@ref(fig:simplt-pars6)). 
+For scenario (3) using the correctly specified loglog link with an identity transformation, bias is small for all parameters for both uncensored and censored outcomes except with the $n=25$ sample size. The estimates using prior $\boldsymbol{\alpha}=1/J$ are slightly more biased than the other concentration priors. (See supplemental figure \@ref(fig:simplt-pars-3)). 
 
 ```{r simplt-pars-2, fig.cap="Bias in parameters for simulations using logit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
@@ -287,7 +293,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
 
 ### Conditional CDF
 
-Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. For conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the othe reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are similar for scenario (2) and (3) under both outcomes: larger percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2), \@ref(fig:simplt-cdf5), and \@ref(fig:simplt-cdf6)).
+Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. For conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the othe reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are similar for scenario (2) and (3) under both outcomes: larger percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2) and \@ref(fig:simplt-cdf-3)).
 
 ```{r simplt-cdf-1, fig.cap="Bias in conditional CDF for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
@@ -295,7 +301,11 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
 
 ### Conditional Mean
 
-The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. The average percent bias across was less than 5\% for all sample sizes and priors for the posterior conditional mean in the first two scenarios. For scenario (3) the average percent bias across all simulations ranged from $<-1.0$\% to -12.5\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior (fig. \@ref(fig:simplt-mn5)). In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the posterior conditional mean estimates for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. A similar trend was seen in scenario (3) where a value of $Y=0$ was used to calculate the conditional mean for outcomes censored at $Y<0$ (fig \@ref(fig:simplt-mn6)).
+The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. The average percent bias across was less than 5\% for all sample sizes and priors for the posterior conditional mean in the first two scenarios.  In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the posterior conditional mean estimates for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. 
+
+! check this paragraph !!
+For scenario (3) the average percent bias for the uncensored outcome ranged from $<-1.0$\% to -12.5\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior (fig. \@ref(fig:simplt-mn-3)). The censored outcome for scenario (3) followed a similar trend as the other scenarios 
+For the censored outcome in similar trend was seen in scenario (3) where a value of $Y=0$ was used to calculate the conditional mean for outcomes censored at $Y<0$.
 
 ```{r simplt-mn-1, fig.cap="Bias in conditional mean for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_mn.png"))
@@ -305,27 +315,39 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_mn.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_mn.png"))
 ```
 
-```{r simplt-mn5, fig.cap="Bias in conditional mean for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-mn-3, fig.cap="Bias in conditional mean for simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_mn.png"))
+```
+
+```{r simplt-mn5, fig.cap="Bias in conditional mean for uncensored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_mn_full.png"))
+```
+
+```{r simplt-mn6, fig.cap="Bias in conditional mean for censored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
+knitr::include_graphics(file.path(wd,"fig","sim_d_mn_cens.png"))
 ```
 
 ### Conditional Median and Quantiles
 
-The results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. The pattern was nearly identical for scenario (2) (fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters (\@ref(fig:simplt-med5) and \@ref(fig:simplt-med6)). 
+The results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. The pattern was nearly identical for scenario (2) (fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters (fig. \@ref(fig:simplt-med-3)). 
 
-Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar trend as the censored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile are close to unbiased for all the priors and sample sizes (fig. \@ref(fig:simplt-q20-5)) and the censored outcome estimates (fig. \@ref(fig:simplt-q20-6)) show smaller bias at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$.
+Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar trend as the censored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile are close to unbiased for all the priors and sample sizes and the censored outcome estimates show smaller bias at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c).
 
-Figure \@ref(fig:simplt-q80-b) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figures \@ref(fig:simplt-q80-5) and \@ref(fig:simplt-q80-6)) present the estimates of the conditional 80th percentile for the uncensored and censored outcomes.
+Figure \@ref(fig:simplt-q80-b) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 2. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figure \@ref(fig:simplt-q80-c) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 3 (avg bias instead of pct bias - check!!).
 
 ```{r simplt-med-1, fig.cap="Bias in conditional median for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_med.png"))
 ```
 
-```{r simplt-med5, fig.cap="Bias in conditional median for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-med-3, fig.cap="Bias in conditional median for simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_med.png"))
+```
+
+```{r simplt-med5, fig.cap="Bias in conditional median for uncensored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_med_full.png"))
 ```
 
-```{r simplt-med6, fig.cap="Bias in conditional median for censored simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-med6, fig.cap="Bias in conditional median for censored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_med_cens.png"))
 ```
 
@@ -337,31 +359,40 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_q20.png"))
 knitr::include_graphics(file.path(wd,"fig","sim_c_q20.png"))
 ```
 
-```{r simplt-q20-5, fig.cap="Bias in conditional 20th percentile for uncensored simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-q20-c, fig.cap="Bias in conditional 20th percentile for simulations using loglog link", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_d_q20.png"))
+```
+
+
+```{r simplt-q20-5, fig.cap="Bias in conditional 20th percentile for uncensored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_q20_full.png"))
 ```
 
-```{r simplt-q20-6, fig.cap="Bias in conditional 20th percentile for censored simulations using loglog link", fig.align='center', out.width='90%'}
+```{r simplt-q20-6, fig.cap="Bias in conditional 20th percentile for censored simulations using loglog link", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_q20_cens.png"))
 ```
 
 ### Computation time
 
-Simulations were run with `R` version 3.6.0 (2019-04-26) and `rstan` (Version 2.19.2, GitRev: 2e1f913d3ca3) on a high-performance computing cluster running under CentOS Linux 7 (Core) with with 1.90GHz or 2.40GHz Intel Xeon CPUs. Computation time for the three scenarios is shown in figures \@ref(fig:simplt-samptime1), \@ref(fig:simplt-samptime3), and \@ref(fig:simplt-samptime4). Average per chain sampling time was similar across scenarios and priors. The censored outcomes -- with fewer categories and $\gamma$ parameters -- had shorter sampling times. 
+Simulations were run with `R` version 3.6.0 (2019-04-26) and `rstan` (Version 2.19.2, GitRev: 2e1f913d3ca3) on a high-performance computing cluster running under CentOS Linux 7 (Core) with with 1.90GHz or 2.40GHz Intel Xeon CPUs. MCMC sampling time for the three scenarios is shown in figure \@ref(fig:simplt-samptime). Average per chain sampling time was similar across scenarios and priors. The censored outcomes -- with fewer categories and $\gamma$ parameters -- had shorter sampling times. 
 
-```{r simplt-samptime1, fig.cap="Per chain MCMC sampling time for scenario 1", fig.align='center', out.width='90%'}
+```{r simplt-samptime, fig.cap="Per chain MCMC sampling time for simulations", fig.align='center', out.width='95%'}
+knitr::include_graphics(file.path(wd,"fig","sim_MCMC_sample_times.png"))
+```
+
+```{r simplt-samptime1, fig.cap="Per chain MCMC sampling time for scenario 1", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_a_MCMC_sample_times.png"))
 ```
 
-```{r simplt-samptime2, eval=F, fig.cap="Per chain MCMC sampling time for scenario 1 - 2nd run", fig.align='center', out.width='90%'}
+```{r simplt-samptime2, fig.cap="Per chain MCMC sampling time for scenario 1 - 2nd run", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_b_MCMC_sample_times.png"))
 ```
 
-```{r simplt-samptime3, fig.cap="Per chain MCMC sampling time for scenario 2", fig.align='center', out.width='90%'}
+```{r simplt-samptime3, fig.cap="Per chain MCMC sampling time for scenario 2", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_c_MCMC_sample_times.png"))
 ```
 
-```{r simplt-samptime4, fig.cap="Per chain MCMC sampling time for scenario 3", fig.align='center', out.width='90%'}
+```{r simplt-samptime4, fig.cap="Per chain MCMC sampling time for scenario 3", fig.align='center', out.width='90%', eval=FALSE}
 knitr::include_graphics(file.path(wd,"fig","sim_d_MCMC_sample_times.png"))
 ```
 
@@ -394,7 +425,7 @@ colnames(elpdtab)<- c("Model", "ELPD diff.", "SE diff.")
 ```
 
 ```{r elpdtab, results = 'asis'}
-kable(elpdtab, caption="Difference in expected log pointwise predictive density for IL-6 models and IL-1-$\\beta$ models", escape=FALSE, booktabs =T) %>% kable_styling(latex_options =c("hold_position")) %>% 
+kable(elpdtab, caption="Difference in expected log pointwise predictive density for IL-6 models and IL-1-$\\beta$ models", escape=FALSE, booktabs =T) %>% #kable_styling(latex_options =c("hold_position")) %>% 
   pack_rows("IL-6",1,4) %>% 
   pack_rows("IL-1-$\\\\beta$",5,8,escape=FALSE) 
 ```
@@ -509,7 +540,6 @@ Bayesian CPMs are a versatile modeling approach with many advantages:
 
 ## Limitations
 
-
 - assumes parallelism (constant difference between transformed conditional CDFs, i.e. proportional odds assumption if using logit link or proportional hazards assumption for cloglog), however less
 - The number of distinct outcome values must be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be known before data collection, so this formulation violates the principle that the prior should be specified without reference to the observed data. For this same reason, the model cannot accomodate new observations so is not useful for Bayesian updating or adaptive designs. In other words, once the initial prior is set the posterior from an initial model cannot serve as the prior for a model with additional data points because there is no way to add categories. <!-- Some discussion of extensions using  e.g. Dirichlet process mixture or Polya trees (ref semiparameteric surv. analysis papers?) -->
 - The choice of link function, and the implied error distribution on the scale of the untransformed data is also assumed to be known. As was seen in the simulations, misspecification of the link function can lead to large bias.
@@ -522,6 +552,8 @@ Bayesian CPMs are a versatile modeling approach with many advantages:
 - nonparametric priors, e.g. Dirichlet process mixture or Polya trees
 - partial proportional odds
 - relaxation of link function specification
+
+[Wrap-up paragraph summarizing findings and giving recommendations] 
 
 <!--
 
